Hyperlink: Fix thumbnail overflow
Before this commit:
 - Images (coming from link preview) could brake html parent element
 - Metadata (p element) could brake html parent element

--- a/browser/css/lool.css
+++ b/browser/css/lool.css
@@ -877,6 +877,7 @@ nav.spreadsheet-color-indicator ~ #sidebar-dock-wrapper {
 	margin: 6px 8px;
 	font-size: 14px;
 	line-height: 1;
+	overflow: hidden;
 }
 
 #hyperlink-pop-up {
@@ -1039,4 +1040,9 @@ nav.spreadsheet-color-indicator ~ #sidebar-dock-wrapper {
 #hyperlink-pop-up-preview img {
 	max-height: 150px;
 	max-width: 250px;
+}
+
+#hyperlink-pop-up-preview p {
+	text-overflow: ellipsis;
+	overflow: hidden;
 }
